fixed page-header (alignment)

--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -52,7 +52,9 @@
 
   &__nav
   {
-    display: inline-block;
+    display: flex;
+    align-items: baseline;
+    margin: 0 auto;
   }
 
   &__nav-link
